[gd_scene load_steps=4 format=3 uid="uid://bbyrp2n1shvyx"]

[ext_resource type="QuadMesh" uid="uid://cpc6tqb33w4lk" path="res://point.tres" id="1_o1ej6"]
[ext_resource type="Script" path="res://spell_point.gd" id="2_aakqc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1uds"]
size = Vector2(1.02131, 1.02131)

[node name="SpellPoint" type="MeshInstance2D"]
self_modulate = Color(1, 0, 1, 1)
position = Vector2(-55, -3.01003e-06)
rotation = 0.785398
scale = Vector2(11.77, 11.77)
mesh = ExtResource("1_o1ej6")
script = ExtResource("2_aakqc")
key_value = -1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.0300386, -0.0300386)
shape = SubResource("RectangleShape2D_w1uds")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
